# approx

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/: Xargo.toml  ci-build.yml
.github/workflows/: ci-build.yml
src/: abs_diff_eq.rs  lib.rs  macro_support.rs  macros.rs  relative_eq.rs  ulps_eq.rs
tests/: abs_diff_eq.rs  macros.rs  relative_eq.rs  ulps_eq.rs
