[package]
name = "approx"
version = "0.1.2"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "Approximate floating point equality comparisons and assertions."

documentation = "https://docs.rs/approx"
homepage = "https://github.com/brendanzab/approx"
repository = "https://github.com/brendanzab/approx"
readme = "README.md"

keywords = [
    "approximate",
    "assert",
    "comparison",
    "equality",
    "float",
    "floating-point",
    "fuzzy",
    "math",
    "test",
]

[lib]
name = "approx"

[features]
no_std = []
use_complex = ["num-complex"]

[dependencies]
num-complex = { version = "0.1.37", optional = true }
